@@ -1,8 +1,13 @@
 PREFIX ?= /usr/local
 install_support = $(patsubst support/%, install-%, $(wildcard support/*))
 
-all:
-	@echo Built
+all: autodep8.1
+
+autodep8.1: autodep8.pod
+	pod2man --verbose --name autodep8 -c '' -r '' --utf8 $< $@ || ($(RM) $@; false)
+
+autodep8.pod: README.md
+	sed -e 's/^#/=head1/' $< > $@ || ($(RM) $@; false)
 
 install: $(install_support)
 	install -d $(DESTDIR)/$(PREFIX)/bin
@@ -11,6 +16,8 @@ install: $(install_support)
 $(install_support): install-%: support/%
 	install -d $(DESTDIR)/$(PREFIX)/share/autodep8/$<
 	install -m 755 $^/* $(DESTDIR)/$(PREFIX)/share/autodep8/$<
+	install -d $(DESTDIR)/$(PREFIX)/share/man/man1
+	install -m 644 autodep8.1 $(DESTDIR)/$(PREFIX)/share/man/man1
 
 .PHONY: test
 test:
@@ -19,4 +26,4 @@ test:
 check: test
 
 clean:
-	@echo Clean
+	$(RM) autodep8.pod autodep8.1
